# mlb-predict

./: .gitignore  AGENTS.md  DATA_SCHEMA.md  Dockerfile  MLB_PREDICT_SPEC.md  MODEL_SPEC.md  README.md  SYSTEM_ARCHITECTURE.md  docker-compose.yml  pyproject.toml  start.bat  start.sh
.agent/: config.yaml  runner.sh
.agent/runners/: python.sh  shell.sh
.github/workflows/: ci.yml
.hypothesis/constants/: 07708255e518e106  1a51da0d91d7af29  5a5bd317876bdc96  650ced83c15b14cb  686931d753bc130e  d7767b73a8430d9d  dc95c4279107937d  ef4e608bf94d43b9
.hypothesis/patches/: 2026-02-28--5e3cb07a.patch
docker/: entrypoint.sh  ingest_daily.sh
docs/: RETROSHEET_ATTRIBUTION.md  team_id_map_template.csv
scripts/: build_crosswalk.py  build_features.py  build_features_2026.py  build_spring_features.py  capture_golden_api.py  compute_drift.py  feature_importance.py  ingest_all.py  ingest_odds.py  ingest_pitcher_stats.py  ingest_player_data.py  ingest_retrosheet_gamelogs.py  ingest_schedule.py  ingest_vegas.py  ingest_weather.py  query_game.py  run_predictions.py  serve.py  train_model.py  update_daily.sh
src/winprob/: logging_config.py  standings.py
tests/: conftest.py
tests/integration/: test_chat_api.py  test_golden_api.py
tests/property/: test_properties.py
tests/unit/: test_admin_pipeline.py  test_admin_tier.py  test_bootstrap_progress.py  test_crosswalk.py  test_game_feed.py  test_gamelogs.py  test_hashing.py  test_id_map.py  test_leaders.py  test_llm_tools.py  test_mcp_resilience.py  test_mcp_server.py  test_mlbapi_client.py  test_player.py  test_schedule.py  (+8 more)
(+79 files in other folders)
